--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -1,14 +1,30 @@
 .mainDiv{
-    background-color: #313131;
+    margin-left: 100px;
+    padding-top: 100px;
+    padding-left: 80px;
+    height: 110vh;
+    background-color: #1e1e1e;
 }
 
 .headers{
-    text-align: center;
+    text-align: left;
 }
 .headers h1{
     color: white;
-    text-align: center;
     font-size: 20px;
     font-weight: 500;
+}
+
+.headers h2{
+    color: white;
+}
+
+.headers span{
+    display: block;
+    margin-top: 5px;
+    background-color: #313131;
+    border-radius: 15px;
+    height: 4px;
+    width: 1500px;
 }
 
