--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,10 +1,10 @@
 /* Top Navbar CSS Code */
 
 .topNav{
-    background-color: #313131;
+    background-color: #2d2d30;
     width: 100%;
     height: 6vh;
-    position: relative;
+    position: fixed;
     align-items: center;
 }
     
