--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,11 +1,10 @@
 .side-nav-container {
-	background-color: #313131;
+    margin-top: 60px;
+    position: fixed;
+	background-color: #2d2d30;
 	width: 300px;
 	height: 100vh;
-	position: relative;
 	color: white;
-    
-
 	transition: 0.4s;
 }
 
@@ -145,6 +144,7 @@
 
     margin: 10px 20px;
     width: 4.5em;
+    
 }
 
 .menu-item:hover > .quoteTitle{
@@ -168,6 +168,15 @@
     white-space: nowrap;
     border: 2px solid #FFFFFF;
     background-color: #313131;
+}
+
+
+@media only screen and (max-width: 768px){
+
+    .side-nav-container {
+        margin-top: 50px;
+    }
+
 }
 
 
